// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-dOaiCS bKdMCw"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-dOaiCS kTlNDp"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-dOaiCS ilcjEL"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-dOaiCS lVSkx"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-dOaiCS dHMzPd"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-dOaiCS dVvsYl"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-dOaiCS bKdMCw"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-dOaiCS bKdMCw"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-dOaiCS fxqcRP"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-dOaiCS hodSjj"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-dOaiCS bQCcsP"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-dOaiCS cqxbgs"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-dOaiCS gPNupN"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-dOaiCS bKdMCw"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-dOaiCS eHwDyD"
  >
    Uppercase Heading
  </h3>,
]
`;
